--- a/src/components/die/Die.css
+++ b/src/components/die/Die.css
@@ -4,4 +4,76 @@
    font-size: 8rem;
    text-align: center;
    overflow: hidden;
+   box-shadow: 0 8px 6px -6px black;
+   border-radius: 10px;
+   -webkit-border-radius: 10px;
+   -moz-border-radius: 10px;
+   -ms-border-radius: 10px;
+   -o-border-radius: 10px;
+}
+
+.shake-die {
+   animation-name: shakeDie;
+   animation-duration: 1s;
+   animation-fill-mode: both;
+   animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+
+}
+
+@keyframes shakeDie {
+   from {
+      transform: translate3d(0, 0, 0) scale(1);
+      -webkit-transform: translate3d(0, 0, 0) scale(1);
+      -moz-transform: translate3d(0, 0, 0) scale(1);
+      -ms-transform: translate3d(0, 0, 0) scale(1);
+      -o-transform: translate3d(0, 0, 0) scale(1);
+   }
+
+   15% {
+      transform: translate3d(-25%, 0, 0) rotate3d(0, 0, 1, -5deg) scale(1.1);
+      -webkit-transform: translate3d(-25%, 0, 0) rotate3d(0, 0, 1, -5deg) scale(1.1);
+      -moz-transform: translate3d(-25%, 0, 0) rotate3d(0, 0, 1, -5deg) scale(1.1);
+      -ms-transform: translate3d(-25%, 0, 0) rotate3d(0, 0, 1, -5deg) scale(1.1);
+      -o-transform: translate3d(-25%, 0, 0) rotate3d(0, 0, 1, -5deg) scale(1.1);
+   }
+
+   30% {
+      transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 3deg) scale(1.2);
+      -webkit-transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 3deg) scale(1.2);
+      -moz-transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 3deg) scale(1.2);
+      -ms-transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 3deg) scale(1.2);
+      -o-transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 3deg) scale(1.2);
+   }
+
+   45% {
+      transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -3deg) scale(.9);
+      -webkit-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -3deg) scale(.9);
+      -moz-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -3deg) scale(.9);
+      -ms-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -3deg) scale(.9);
+      -o-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -3deg) scale(.9);
+   }
+
+   60% {
+      transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg) scale(1.1);
+      -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg) scale(1.1);
+      -moz-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg) scale(1.1);
+      -ms-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg) scale(1.1);
+      -o-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg) scale(1.1);
+   }
+
+   75% {
+      transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -1deg) scale(.95);
+      -webkit-transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -1deg) scale(.95);
+      -moz-transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -1deg) scale(.95);
+      -ms-transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -1deg) scale(.95);
+      -o-transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -1deg) scale(.95);
+   }
+
+   to {
+      transform: translate3d(0, 0, 0) scale(1);
+      -webkit-transform: translate3d(0, 0, 0) scale(1);
+      -moz-transform: translate3d(0, 0, 0) scale(1);
+      -ms-transform: translate3d(0, 0, 0) scale(1);
+      -o-transform: translate3d(0, 0, 0) scale(1);
+   }
 }
